--- a/src/app/index.html
+++ b/src/app/index.html
@@ -321,11 +321,12 @@
 						<div class="m-4" id="importKeys1">
 							<div class="mb-3">
 								<label>Key's type:</label>
-								<select class="form-select" id="importKeys1Type" onchange="importName.hidden = importKeys1Type.value == 'file'">
+								<select class="form-select" id="importKeys1Type" onchange="importName.hidden = importKeys1Type.value == 'file' || importKeys1Type.value == 'ledger'">
 									<option value="null" selected disabled>Select key type</option>
 									<option value="mnemonic">Mnemonic Phrase</option>
 									<option value="keys">Private Keys (WIF)</option>
 									<option value="file">Key File (.dgb)</option>
+									<option value="ledger">Ledger HW</option>
 								</select>
 							</div>
 							<div class="mb-3" id="importName" hidden>
@@ -621,17 +622,29 @@
 							</div>
 						</div>
 						<div class="m-4" id="addAccount3">
+							<label id="addAccount3Status">
+								Checking device...
+							</label>
+							<div class="text-center">
+								<button class="btn btn-secondary btn-sm" onclick="addAccount_Close()">
+									<svg class="bi" width="18" height="18">
+										<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+									</svg> Close
+								</button>
+							</div>
+						</div>
+						<div class="m-4" id="addAccount4">
 							<div class="mb-3">
 								Select addresses:
 							</div>
-							<div class="mb-3 list" id="addAccount3Found" style="max-height: 50vh;"></div>
+							<div class="mb-3 list" id="addAccount4Found" style="max-height: 50vh;"></div>
 							<div class="d-flex justify-content-center mb-3">
-								<div class="spinner-border mx-auto" id="addAccount3Spinner">
+								<div class="spinner-border mx-auto" id="addAccount4Spinner">
 								</div>
 							</div>
-							<div class="mb-3 text-center" id="addAccount3Message"></div>
+							<div class="mb-3 text-center" id="addAccount4Message"></div>
 							<div class="text-center">
-								<button class="btn btn-success btn-sm" onclick="addAccount3_Create()">
+								<button class="btn btn-success btn-sm" onclick="addAccount4_Create()">
 									<svg class="bi" width="18" height="18">
 										<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 									</svg> Create
@@ -643,17 +656,17 @@
 								</button>
 							</div>
 						</div>
-						<div class="m-4" id="addAccount4">
+						<div class="m-4" id="addAccount5">
 							<div class="mb-3">
 								Select account:
 							</div>
-							<div class="mb-3" id="addAccount4Found"></div>
+							<div class="mb-3" id="addAccount5Found"></div>
 							<div class="d-flex justify-content-center mb-3">
-								<div class="spinner-border mx-auto" id="addAccount4Spinner">
+								<div class="spinner-border mx-auto" id="addAccount5Spinner">
 								</div>
 							</div>
 							<div class="text-center">
-								<button class="btn btn-danger btn-sm" onclick="addAccount4_StopLooking()">
+								<button class="btn btn-danger btn-sm" onclick="addAccount5_StopLooking()">
 									<svg class="bi" width="18" height="18">
 										<use xlink:href="vendor/bootstrap-icons.svg#x-square" />
 									</svg> Stop Looking
@@ -665,8 +678,8 @@
 								</button>
 							</div>
 						</div>
-						<div class="m-4" id="addAccount5">
-							<div class="mb-3 text-center" id="addAccount5Message"></div>
+						<div class="m-4" id="addAccount6">
+							<div class="mb-3 text-center" id="addAccount6Message"></div>
 							<div class="mb-3 text-center">
 								<button class="btn btn-secondary btn-sm" onclick="addAccount_Close()">
 									<svg class="bi" width="18" height="18">
