Updated ledger management

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -622,9 +622,13 @@
 							</div>
 						</div>
 						<div class="m-4" id="addAccount3">
-							<label id="addAccount3Status">
+							<label class="mb-3" id="addAccount3Status">
 								Checking device...
 							</label>
+							<div class="d-flex justify-content-center mb-3">
+								<div class="spinner-border mx-auto">
+								</div>
+							</div>
 							<div class="text-center">
 								<button class="btn btn-secondary btn-sm" onclick="addAccount_Close()">
 									<svg class="bi" width="18" height="18">
