--- a/src/app/index.html
+++ b/src/app/index.html
@@ -867,7 +867,7 @@
 									<option value="short-save">Short Term Fee Save</option>
 									<option value="long-save" selected>Long Term Fee Save</option>
 									<option value="max-save">Max Fee Save</option>
-									<option value="security">Extra Security</option>
+									<option value="privacy">Extra Privacy</option>
 								</select>
 							</div>
 
@@ -999,11 +999,23 @@
 								</button>
 							</div>
 						</div>
-						<div class="m-4" id="sendDGB4" hidden>
-							<div class="text-center mb-3" id="sendDGB4Spinner">
-								<div class="spinner-border text-primary"> </div>
+						<div class="m-4" id="sendDGB4">
+							<div class="text-center mb-3" id="sendDGB4Status">
 							</div>
-							<div class="mb-3 text-break" id="sendDGB4Message"></div>
+							<div class="d-flex justify-content-center mb-3">
+								<div class="spinner-border mx-auto">
+								</div>
+							</div>
+							<div class="text-center">
+								<button class="btn btn-secondary btn-sm" onclick="sendDGB_Close()">
+									<svg class="bi" width="18" height="18">
+										<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+									</svg> Close
+								</button>
+							</div>
+						</div>
+						<div class="m-4" id="sendDGB5" hidden>
+							<div class="mb-3 text-break" id="sendDGB5Message"></div>
 							<div class="text-center">
 								<button class="btn btn-secondary btn-sm" onclick="sendDGB_Close()">
 									<svg class="bi" width="18" height="18">
