Fixed sending transaction signatures

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -622,9 +622,7 @@
 							</div>
 						</div>
 						<div class="m-4" id="addAccount3">
-							<div class="text-center mb-3" id="addAccount3Status">
-								Checking device...
-							</div>
+							<div class="text-center mb-3" id="addAccount3Status"></div>
 							<div class="d-flex justify-content-center mb-3">
 								<div class="spinner-border mx-auto">
 								</div>
@@ -808,9 +806,7 @@
 							</div>
 						</div>
 						<div class="m-4" id="receiveDGB2">
-							<div class="text-center mb-3" id="receiveDGB2Status">
-								Checking device...
-							</div>
+							<div class="text-center mb-3" id="receiveDGB2Status"></div>
 							<div class="d-flex justify-content-center mb-3">
 								<div class="spinner-border mx-auto">
 								</div>
@@ -1019,9 +1015,7 @@
 							</div>
 						</div>
 						<div class="m-4" id="sendDGB4">
-							<div class="text-center mb-3" id="sendDGB4Status">
-								Checking device...
-							</div>
+							<div class="text-center mb-3" id="sendDGB4Status"></div>
 							<div class="d-flex justify-content-center mb-3">
 								<div class="spinner-border mx-auto">
 								</div>
