--- a/src/app/index.html
+++ b/src/app/index.html
@@ -30,12 +30,12 @@
 							<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat" />
 						</svg>
 					</button>
-					<button id="topSettings" class="btn btn-dgb btn-lg" onclick="frmKeys_Manage(); frmAccount_Manage()">
+					<button id="topSettings" class="btn btn-dgb btn-lg" onclick="frmKeys_Manage(); frmAccount_Manage()" hidden>
 						<svg class="bi bi-btn" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#sliders" />
 						</svg>
 					</button>
-					<button id="topKeys" class="btn btn-dgb btn-lg" onclick="frmKeys_Load()">
+					<button id="topKeys" class="btn btn-dgb btn-lg" onclick="frmKeys_Load()" hidden>
 						<svg class="bi bi-btn" width="18" height="18">
 							<use xlink:href="vendor/bootstrap-icons.svg#wallet" />
 						</svg>
