--- a/src/app/index.html
+++ b/src/app/index.html
@@ -713,26 +713,26 @@
 								<input type="text" class="form-control" id="manageAccount1Name" readonly>
 							</div>
 							<div class="mb-3">
-								<label for="manageAccount1xpub">XPUB:</label>
-								<div class="input-group">
-									<input type="text" class="form-control" id="manageAccount1xpub" readonly>
-									<button class="btn btn-success" type="button" id="manageAccount1xpubCopy" onclick="manageAccount1xpub_Copy()">
-										<svg class="bi" width="18" height="18">
+								<label for="manageAccount1xpub">
+									XPUB:
+									<button class="btn btn-sm" type="button" id="manageAccount1xpubCopy" onclick="manageAccount1xpub_Copy()">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#clipboard" />
 										</svg>
 									</button>
-								</div>
+								</label>
+								<input type="text" class="form-control" id="manageAccount1xpub" readonly>
 							</div>
 							<div class="mb-3">
-								<label for="manageAccount1Path">Derivation Path:</label>
-								<div class="input-group">
-									<input type="text" class="form-control" id="manageAccount1Path" readonly>
-									<button class="btn btn-success" type="button" id="manageAccount1PathCopy" onclick="manageAccount1Path_Copy()">
-										<svg class="bi" width="18" height="18">
+								<label for="manageAccount1Path">
+									Derivation Path:
+									<button class="btn btn-sm" type="button" id="manageAccount1PathCopy" onclick="manageAccount1Path_Copy()">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#clipboard" />
 										</svg>
 									</button>
-								</div>
+								</label>
+								<input type="text" class="form-control" id="manageAccount1Path" readonly>									
 							</div>
 							<div class="text-center mb-3">
 								<button type="button" class="btn btn-danger btn-sm" onclick="manageAccount1_Delete()">
@@ -793,15 +793,15 @@
 							</div>
 							<div class="mb-3 text-center" id="receiveDGB1Path"></div>
 							<div class="mb-3">
-								<label>Address:</label>
-								<div class="input-group">
-									<input class="form-control text-center" id="receiveDGB1Address" readonly>
-									<button class="btn btn-success" type="button" id="receiveDGB1Copy" onclick="receiveDGB1_Copy()">
-										<svg class="bi" width="18" height="18">
+								<label>
+									Address:
+									<button class="btn btn-sm" type="button" id="receiveDGB1Copy" onclick="receiveDGB1_Copy()">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#clipboard" />
 										</svg>
 									</button>
-								</div>
+								</label>
+								<input class="form-control text-center" id="receiveDGB1Address" readonly>									
 							</div>
 							<div class="text-center">
 								<button class="btn btn-secondary btn-sm" onclick="receiveDGB_Close()">
@@ -937,7 +937,7 @@
 									<div class="form-check">
 										<input class="form-check-input" type="radio" name="sendDGB2LockTime" id="sendDGB2DateTimeCheck" onchange="sendDGB2DateOption.hidden = !this.checked; sendDGB2BlockOption.hidden = this.checked">
 										<label class="form-check-label" for="sendDGB2DateTimeCheck">
-											DateTime
+											DateTime (UTC)
 										</label>
 									</div>
 								</div>
